gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail7861.d
version https://git-lfs.github.com/spec/v1
oid sha256:66a785faa18fa9e5b3b7cde7d77cad738a67a2faeca4b42194fb51ee1b87982a
size 276
